fixed alignment of profile-submenu

--- a/src/DotHiv/WebsiteCharityBundle/Resources/public/bootstrap-custom/profile.less
+++ b/src/DotHiv/WebsiteCharityBundle/Resources/public/bootstrap-custom/profile.less
@@ -74,6 +74,9 @@
         font-weight: bold;
         text-decoration: underline;
     }
+    & * .span3 {
+        margin-left: 0px;
+    }
 }
 
 
